--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,16 @@ footer p {
   color: white;
 }
 
+/* Trying to make the background of table footer the primary colour */
+
+/* .table-transparent {
+  background-color: transparent;
+}
+
+footer tr, footer th {
+  background-color: var(--primary-color);
+} */
+
 /* Social Links */
 
 #social-links a {
