--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,10 @@ h4 {
   color: var(--font-color);
 }
 
+#about {
+  min-height: 87vh;
+}
+
 /* Navbar Styling */
 
 #navbar {
@@ -166,7 +170,7 @@ footer table {
 
 /* XL Devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
-  header h2 {
+  #hero-intro h2 {
     border-radius: 1.25rem;
   }
 
