Fix Navbar Links and Add Scroll padding to Compensate for Fixed Navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 
 /* Global Stlyes */
 
+html {
+  scroll-padding: 6.25rem;
+}
+
 body {
   font-family: var(--primary-font);
   padding-top: 6rem;
