--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   --highlight-color: #82ddf2;
   --highlight-color-light: #f0eee8;
   --font-color: #ffffff;
+  --quote-color: #000000;
   --primary-font: "Figtree", sans-serif;
   --secondary-font: "Kranky", cursive;
 }
@@ -62,7 +63,7 @@ h4 {
 }
 
 #about {
-  min-height: 87vh;
+  min-height: 86vh;
 }
 
 .adoption-card {
@@ -89,7 +90,7 @@ h4 {
 
 #success-stories figure figcaption,
 cite {
-  color: #000000;
+  color: var(--quote-color);
 }
 
 
