Add img positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,11 @@ cite {
   border-radius: 0;
 }
 
+img {
+  object-fit: cover;
+  object-position: center;
+}
+
 /* Carousel Styling */
 
 .max-height {
