--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,9 +179,15 @@ iframe {
 }
 
 /* XS Devices */
-@media screen and (max-width: 467px) {
+@media screen and (max-width: 565px) {
   #navbar h1 {
     font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 566px) {
+  #navbar h1 {
+    font-size: 2.7rem;
   }
 }
 
@@ -191,6 +197,18 @@ iframe {
     min-width: 25rem;
   }
 }
+
+@media screen and (min-width: 430px) {
+  #navbar h1 {
+    font-size: 2rem;
+  }
+}
+
+/* @media screen and (max-width: 767px) {
+  #navbar h1 {
+    font-size: 2.7rem;
+  }
+} */
 
 /* MD Devices */
 @media screen and (min-width: 768px) {
@@ -204,6 +222,10 @@ iframe {
 
   .dog-image-height {
     max-height: 13.1rem;
+  }
+
+  #navbar h1 {
+    font-size: 2.8rem;
   }
 }
 
